# nabla

./: .dockerignore  .env.dev  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CRUSH.md  Cargo.toml  Dockerfile  Dockerfile.fast  LICENSE  README.md  SECURITY.md  cobertura.xml  demo.cast  env.example  fix_tests.rs  minimal_test_binary.macho  openapi.yml  test_binary
.crush/: crush.db-shm  crush.db-wal
.github/workflows/: codeql.yml  coverage.yml  gchr-publish.yml  push-to-ecr.yml  push-to-ghcr.yml  release.yml  scorecard.yml
coverage/: tarpaulin-report.html
migrations/: 001_create_marketplace_tables.sql  001_initial.sql
src/: config.rs  database.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  ssrf_protection.rs
src/analysis/: cargo_audit.rs  cargo_metadata.rs  documentation.rs  license_analyzer.rs  mod.rs  source_analyzer.rs
src/binary/: ai_enhanced.rs  attest_binary.rs  binary_analysis.rs  check_vulnerabilities.rs  generate_sbom.rs  metadata_extractor.rs  mod.rs  sbom_generation.rs  scanner.rs  secret_scanner.rs
src/cli/: analyze.rs  auth.rs  config.rs  jwt_store.rs  mod.rs
src/crypto/: fips_provider.rs  mod.rs
src/crypto_backup/: mod.rs
src/enterprise/: LICENSE.md  README.md  mod.rs
src/enterprise/attestation/: attest_binary.rs  mod.rs
src/enterprise/secure/: behavioral_analysis.rs  control_flow.rs  crypto_analysis.rs  mod.rs  static_analysis.rs  supply_chain.rs
src/enterprise/types/: core.rs
src/package/: cargo_metadata.rs  git_analyzer.rs  llm_enricher.rs  mod.rs  source_analyzer.rs  unsafe_detector.rs
src/providers/: bedrock.rs  http.rs  mod.rs
src/routes/: binary.rs  debug.rs  mod.rs  packages.rs
test_binaries/: test2.c  test_binary1
test_binaries/test_binaries/: test1.c  test2.c  test_binary1  test_binary2
tests/: README.md  archive_integration_test.rs  arm_cortex_m_integration_test.rs  arm_elf_integration_test.rs  attest_binary_tests.rs  binary_analysis_edge_cases.rs  binary_analysis_tests.rs  cli_tools_tests.rs  compressed_firmware_integration_test.rs  config_tests.rs  control_flow_tests.rs  cve_tests.rs  dicom_integration_test.rs  enterprise_license_gating_tests.rs  enterprise_reachability_tests.rs  error_paths_tests.rs  fips_core_tests.rs  fips_tls_tests.rs  http_provider_mocking_tests.rs  inference_tests.rs  integration_tests.rs  intel_hex_integration_test.rs  macho_integration_test.rs  marketplace_tests.rs  metadata_extractor_tests.rs  middleware_tests.rs  motorola_srec_integration_test.rs  path_traversal_tests.rs  pe_integration_test.rs  providers_tests.rs  routes_tests.rs  ssrf_protection_tests.rs  test_config.rs  test_scans.rs  wasm_integration_test.rs  x86_64_elf_integration_test.rs
utilities/: demo_recording.sh  mint_jwt_with_doppler.sh
utility_bins/: buffer.c  vulnerable_elf  vulnerable_elf.c  vulnerable_macho
