[package]
name = "nabla"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = { version = "0.7", features = ["multipart"] }
async-openai = "0.29"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cargo integration
cargo_metadata = "0.18"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }

# File system operations
walkdir = "2.0"
tempfile = "3.0"

# Git operations
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

# TOML parsing
toml = "0.8"

# Regex for pattern matching
regex = "1.0"

# Cryptographic hashing
sha2 = "0.10"
blake3 = "1.5"
base64 = "0.21"    # or latest
hex = "0.4"

# Binary analysis
goblin = "0.8"
object = "0.34"
wasmparser = "0.121"
infer = "0.16"
pelite = "0.10"

# Secret scanning
aho-corasick = "1.1"
entropy = "0.4"

# Additional dependencies for syn
proc-macro2 = "1.0"
quote = "1.0"

# Process execution
tokio-process = "0.2"

# Additional JSON handling
json = "0.12"

# Additional dependencies for which crate
which = "4.4"

# For resolving the home directory
home = "0.5"

# Additional dependencies for tar extraction
flate2 = "1.0"
tar = "0.4"

# Additional dependencies for url crate
url = "2.4"

# Concurrency utilities for in-memory rate limiting
once_cell = "1.19"
dashmap = "5.5" 

# Additional dependencies for base64ct
base64ct = "=1.7.3" 
multipart = "0.18.0"

[dev-dependencies]
hyper = { version = "0.14.12", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1" 
bytes = "1"
multer = "3" 
mockall = "0.12"