[package]
name = "nabla"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# FIPS-compliant TLS support
rustls = "0.21"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
hyper-rustls = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cargo integration
cargo_metadata = "0.18"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }

# File system operations
walkdir = "2.0"
tempfile = "3.0"

# Regex for pattern matching
regex = "1.0"

# Cryptographic hashing
sha2 = "0.10"
blake3 = "1.5"
base64 = "0.21"    # or latest
hex = "0.4"
hmac = "0.12"

# FIPS 140-3 key derivation
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"

# OpenSSL for FIPS compliance
openssl = "0.10"

# Binary analysis
goblin = "0.10"
object = "0.34"
wasmparser = "0.121"
infer = "0.16"
pelite = "0.10"

# Secret scanning
aho-corasick = "1.1"
entropy = "0.4"

# Additional dependencies for syn
proc-macro2 = "1.0"
quote = "1.0"

# Additional JSON handling
# json = "0.12"  # Removed due to RUSTSEC-2022-0081 vulnerability

# Additional dependencies for which crate
which = "8.0"

# For resolving the home directory
home = "0.5"

# Additional dependencies for tar extraction
flate2 = "1.0"
tar = "0.4"

# Additional dependencies for url crate
url = "2.4"

# Concurrency utilities for in-memory rate limiting
once_cell = "1.19"
dashmap = "6.1" 

# Additional dependencies for base64ct
base64ct = "=1.8.0" 
ran = "2.0.1"
rand = "0.9"
jsonwebtoken = "9"
ed25519-dalek = "2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
hyper = { version = "0.14.12", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1" 
bytes = "1"
multer = "3" 
mockall = "0.12"
wiremock = "0.6"
axum-test = "17"
futures = "0.3"
tempfile = "3.0"
